Bug 1796730 - Fix computation of Windows titlebar accent colors. r=handyman,desktop-theme-reviewers,dao

Since the DWM accent colors can be different from the UWP accent colors
(see comments in the bug), expose them as the proper ActiveBorder /
InactiveBorder / ActiveCaption / CaptionText / InactiveCaption /
InactiveCaptionText colors, which have that purpose.

Fix browser-aero.css to use the right color for the border
(ActiveBorder).

Differential Revision: https://phabricator.services.mozilla.com/D183165